--- a/src/pages/TreeHome/TreeHome.css
+++ b/src/pages/TreeHome/TreeHome.css
@@ -1,3 +1,10 @@
+.tree-profile{
+  padding-bottom: 30px;
+  height: 35vh;
+}
+
 .tree{
-    margin-left: 5%;
+  border: 1px solid black;
+  min-height: 60vh;
+  margin-bottom: 10px;
 }
